Patch for HARMONY-2811 "[classlib] [luni] Fixes for some minor issues in luni found by Melody (FindBugs)"
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@489307 13f79535-47bb-0310-9956-ffa450edef68